test/corpus/subroutines.txt
==================
Simple subroutine
==================

vcl 4.1;

sub vcl_recv {
  return (hash);
}

---

(source_file
  (vcl_declaration
    (version))
  (subroutine_declaration
    (identifier)
    (block
      (return_statement
        (identifier)))))

==================
Subroutine with if statement
==================

vcl 4.1;

sub vcl_recv {
  if (req.url ~ "^/admin") {
    return (pass);
  }
  return (hash);
}

---

(source_file
  (vcl_declaration
    (version))
  (subroutine_declaration
    (identifier)
    (block
      (if_statement
        (condition
          (binary_expression
            (member_expression
              (identifier)
              (identifier))
            (string)))
        (block
          (return_statement
            (identifier))))
      (return_statement
        (identifier)))))

==================
Subroutine with else if and elseif chain
==================

vcl 4.1;

sub vcl_recv {
  if (req.url == "/a") {
    return (pass);
  } else if (req.url == "/b") {
    return (hash);
  } elseif (req.url == "/c") {
    return (pipe);
  } else {
    return (synth(404));
  }
}

---

(source_file
  (vcl_declaration
    (version))
  (subroutine_declaration
    (identifier)
    (block
      (if_statement
        (condition
          (binary_expression
            (member_expression
              (identifier)
              (identifier))
            (string)))
        (block
          (return_statement
            (identifier)))
        (condition
          (binary_expression
            (member_expression
              (identifier)
              (identifier))
            (string)))
        (block
          (return_statement
            (identifier)))
        (condition
          (binary_expression
            (member_expression
              (identifier)
              (identifier))
            (string)))
        (block
          (return_statement
            (identifier)))
        (block
          (return_statement
            (function_call
              (identifier)
              (arguments
                (integer)))))))))

==================
Subroutine with set statement
==================

vcl 4.1;

sub vcl_recv {
  set req.http.X-Forwarded-For = client.ip;
}

---

(source_file
  (vcl_declaration
    (version))
  (subroutine_declaration
    (identifier)
    (block
      (set_statement
        (member_expression
          (identifier)
          (identifier)
          (identifier))
        (member_expression
          (identifier)
          (identifier))))))

==================
Subroutine with unset statement
==================

vcl 4.1;

sub vcl_recv {
  unset req.http.Cookie;
}

---

(source_file
  (vcl_declaration
    (version))
  (subroutine_declaration
    (identifier)
    (block
      (unset_statement
        (member_expression
          (identifier)
          (identifier)
          (identifier))))))

==================
Subroutine with call statement
==================

vcl 4.1;

sub helper {
  set req.http.X-Helper = "1";
}

sub vcl_recv {
  call helper;
}

---

(source_file
  (vcl_declaration
    (version))
  (subroutine_declaration
    (identifier)
    (block
      (set_statement
        (member_expression
          (identifier)
          (identifier)
          (identifier))
        (string))))
  (subroutine_declaration
    (identifier)
    (block
      (call_statement
        (identifier)))))
